// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.interaction-hint > render error interaction hint with the giving title 1`] = `
.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c3 .c1,
.c3::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c3 .c1 {
  color: rgb(77, 77, 77);
}

.c4 .c1,
.c4::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c4 .c1 {
  color: rgb(77, 77, 77);
}

.c5 .c1,
.c5::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c5 .c1 {
  color: rgb(77, 77, 77);
}

.c6 .c1,
.c6::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c6 .c1 {
  color: rgb(77, 77, 77);
}

.c7 .c1,
.c7::before {
  border-color: rgb(249, 191, 48);
  background-color: rgb(254, 242, 218);
}

.c7 .c1 {
  color: rgb(22, 25, 29);
}

.c8 .c1,
.c8::before {
  border-color: rgb(249, 191, 48);
  background-color: rgb(254, 242, 218);
}

.c8 .c1 {
  color: rgb(22, 25, 29);
}

.c9 .c1,
.c9::before {
  border-color: rgb(201, 29, 29);
  background-color: rgb(252, 233, 233);
}

.c9 .c1 {
  color: rgb(201, 29, 29);
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 43px;
}

.c0 .c1,
.c0::before {
  border-color: rgb(201, 29, 29);
  background-color: rgb(252, 233, 233);
}

.c0 .c1 {
  color: rgb(201, 29, 29);
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1 c2"
    data-role="interaction-hint-content"
  >
    This is a hint
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.interaction-hint > render info interaction hint with the giving title 1`] = `
.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c3 .c1,
.c3::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c3 .c1 {
  color: rgb(77, 77, 77);
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 43px;
}

.c0 .c1,
.c0::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c0 .c1 {
  color: rgb(77, 77, 77);
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1 c2"
    data-role="interaction-hint-content"
  >
    This is a hint
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.interaction-hint > render interaction hint with the giving title 1`] = `
.c1 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 43px;
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1"
    data-role="interaction-hint-content"
  >
    This is a hint
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.interaction-hint > render success interaction hint with the giving title 1`] = `
.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c3 .c1,
.c3::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c3 .c1 {
  color: rgb(77, 77, 77);
}

.c4 .c1,
.c4::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c4 .c1 {
  color: rgb(77, 77, 77);
}

.c5 .c1,
.c5::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c5 .c1 {
  color: rgb(77, 77, 77);
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 43px;
}

.c0 .c1,
.c0::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c0 .c1 {
  color: rgb(77, 77, 77);
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1 c2"
    data-role="interaction-hint-content"
  >
    This is a hint
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.interaction-hint > render warning interaction hint with the giving title 1`] = `
.c2 {
  background-color: rgb(255, 255, 255);
  border: 1px solid rgb(181, 76, 23);
  border-radius: 2px;
  box-shadow: rgba(22, 25, 29, 0.4) 1px 2px 2px 0px;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  max-height: 100%;
  outline: none;
  overflow-y: auto;
  padding: 4px 8px;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c3 .c1,
.c3::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c3 .c1 {
  color: rgb(77, 77, 77);
}

.c4 .c1,
.c4::before {
  border-color: rgb(5, 104, 174);
  background-color: rgb(255, 255, 255);
}

.c4 .c1 {
  color: rgb(77, 77, 77);
}

.c5 .c1,
.c5::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c5 .c1 {
  color: rgb(77, 77, 77);
}

.c6 .c1,
.c6::before {
  border-color: rgb(41, 122, 36);
  background-color: rgb(255, 255, 255);
}

.c6 .c1 {
  color: rgb(77, 77, 77);
}

.c7 .c1,
.c7::before {
  border-color: rgb(249, 191, 48);
  background-color: rgb(254, 242, 218);
}

.c7 .c1 {
  color: rgb(22, 25, 29);
}

.c0 {
  max-width: 472px;
  margin: 9px 16px 0px;
  position: relative;
  outline: none;
}

.c0 + span {
  outline: none;
}

.c0::before {
  background-color: rgb(255, 255, 255);
  border-width: 1px medium medium 1px;
  border-style: solid none none solid;
  border-color: rgb(181, 76, 23) currentcolor currentcolor rgb(181, 76, 23);
  border-image: initial;
  content: "";
  height: 12px;
  pointer-events: none;
  position: absolute;
  width: 12px;
  top: -6px;
  transform: translateX(-50%) rotate(45deg);
  left: 43px;
}

.c0 .c1,
.c0::before {
  border-color: rgb(249, 191, 48);
  background-color: rgb(254, 242, 218);
}

.c0 .c1 {
  color: rgb(22, 25, 29);
}

<div
  class="c0"
  data-role="interaction-hint"
  role="dialog"
>
  <div
    class="c1 c2"
    data-role="interaction-hint-content"
  >
    This is a hint
  </div>
</div>
`;
